Bug 355931 - Crash when parsing files [QmlJS::ModelManagerInterface::projectInfos, QmlJS::ModelManagerInterface::filesAtQrcPath]
Summary: Crash when parsing files [QmlJS::ModelManagerInterface::projectInfos, QmlJS::...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Language Support: QML/JavaScript (other bugs)
Version First Reported In: 4.90.90
Platform: Other Linux
: NOR crash
Target Milestone: 5.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2015-11-26 11:06 UTC by Kevin Funk
Modified: 2015-12-01 16:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2015-11-26 11:06:59 UTC
Backtrace:
#1  0x00007fffd23f07c1 in QMutexLocker::QMutexLocker (this=0x7fffbd5684d0, m=0x10) at /home/kfunk/devel/src/qt5.4/qtbase/src/corelib/thread/qmutex.h:128
#2  0x00007fffd24876aa in QmlJS::ModelManagerInterface::projectInfos (this=0x0) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/qmljsmodelmanagerinterface.cpp:509
#3  0x00007fffd2486e12 in QmlJS::ModelManagerInterface::filesAtQrcPath (this=0x0, path="qrc:///kdsme/qml/util/", locale=0x0, project=0x0, resources=QmlJS::ModelManagerInterface::AllQrcResources) at /home/kfunk/devel/src/kf5/kdevelop/lang
uages/qmljs/libs/qmljs/qmljsmodelmanagerinterface.cpp:444
#4  0x00007fffd247a303 in QmlJS::ImportInfo::pathImport (docPath="/home/kfunk/devel/src/KDStateMachineEditor/src/view/qml/uml", path="qrc:///kdsme/qml/util/", version=..., as="", ast=0x7fffb02a4760) at /home/kfunk/devel/src/kf5/kdevelop/
languages/qmljs/libs/qmljs/qmljsinterpreter.cpp:2257
#5  0x00007fffd24585f4 in QmlJS::Bind::visit (this=0x7fffb01fcd20, ast=0x7fffb02a4760) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/qmljsbind.cpp:222
#6  0x00007fffd243bd60 in QmlJS::AST::UiImport::accept0 (this=0x7fffb02a4760, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:917
#7  0x00007fffd2439420 in QmlJS::AST::Node::accept (this=0x7fffb02a4760, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:42
#8  0x00007fffd243946c in QmlJS::AST::Node::accept (node=0x7fffb02a4760, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:50
#9  0x00007fffd243bea7 in QmlJS::AST::UiHeaderItemList::accept0 (this=0x7fffb02a47f8, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:944
#10 0x00007fffd2439420 in QmlJS::AST::Node::accept (this=0x7fffb02a47f8, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:42
#11 0x00007fffd243946c in QmlJS::AST::Node::accept (node=0x7fffb02a47f8, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:50
#12 0x00007fffd243bebe in QmlJS::AST::UiHeaderItemList::accept0 (this=0x7fffb02a4710, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:945
#13 0x00007fffd2439420 in QmlJS::AST::Node::accept (this=0x7fffb02a4710, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:42
#14 0x00007fffd243946c in QmlJS::AST::Node::accept (node=0x7fffb02a4710, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:50
#15 0x00007fffd243bebe in QmlJS::AST::UiHeaderItemList::accept0 (this=0x7fffb02a44f0, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:945
#16 0x00007fffd2439420 in QmlJS::AST::Node::accept (this=0x7fffb02a44f0, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:42
#17 0x00007fffd243946c in QmlJS::AST::Node::accept (node=0x7fffb02a44f0, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:50
#18 0x00007fffd243bebe in QmlJS::AST::UiHeaderItemList::accept0 (this=0x7fffb02a43d0, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:945
#19 0x00007fffd2439420 in QmlJS::AST::Node::accept (this=0x7fffb02a43d0, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:42
#20 0x00007fffd243946c in QmlJS::AST::Node::accept (node=0x7fffb02a43d0, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:50
#21 0x00007fffd243bebe in QmlJS::AST::UiHeaderItemList::accept0 (this=0x7fffb02a4230, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:945
#22 0x00007fffd2439420 in QmlJS::AST::Node::accept (this=0x7fffb02a4230, visitor=0x7fffb01fcd20) at /home/kfunk/devel/src/kf5/kdevelop/languages/qmljs/libs/qmljs/parser/qmljsast.cpp:42

Reproducible: Always

Steps to Reproduce:
1. Open https://github.com/KDAB/KDStateMachineEditor in KDevelop
Comment 1 Kevin Funk 2015-11-26 20:19:54 UTC
Git commit 6e3e4ceadd9cbf4eee9c133b03d66beadb63eb39 by Kevin Funk.
Committed on 26/11/2015 at 20:17.
Pushed by kfunk into branch '5.0'.

QmlJS: Fix crash when parsing QRC import

Regression likely introduced when we updated the 3rdparty qmljs lib

M  +18   -0    languages/qmljs/kdevqmljsplugin.cpp
M  +4    -0    languages/qmljs/kdevqmljsplugin.h
A  +5    -0    languages/qmljs/tests/files/qrc_import.qml     [License: UNKNOWN]  *
M  +1    -0    languages/qmljs/tests/test_files.cpp

The files marked with a * at the end have a non valid license. Please read: http://techbase.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


http://commits.kde.org/kdevelop/6e3e4ceadd9cbf4eee9c133b03d66beadb63eb39