QmlJS: Fix crash when parsing QRC import

Regression likely introduced when we updated the 3rdparty qmljs lib

BUG: 355931